Fixed the user update function
