# src/routes/user.routes.js
@@ -4,27 +4,24 @@ import { body,  param, query, validationResult  } from 'express-validator';
 import UserController from '../controllers/user.controller.js';
 import ensureAuthenticated from '../middleware/ensureAthenticated.js'; 
 
-router.put('/user/:userId', [
-  param('userId').isMongoId(),
-  body('password').optional(),
-  body('displayName').optional(),
-  body('isActive').optional().isBoolean(),
-], 
- /*
-    #swagger.summary = 'Create new user'
-  
+router.put('/user/:userId', 
+    /*
+    #swagger.summary = 'Update user by id'
     #swagger.requestBody = {
-      required: true,
       content: {
         "application/json": {
           schema: { $ref: "#/components/schemas/UserUpdate" }
         }
       }
     }
-  *
-
-
-ensureAuthenticated, UserController.updateUser );
+  */
+  
+  [
+  param('userId').isMongoId(),
+  body('password').optional(),
+  body('displayName').optional(),
+  body('isActive').optional().isBoolean(),
+],  ensureAuthenticated, UserController.updateUser );
 
 
 router.delete('/user/:userId',  /*
